add some touch input

--- a/index.html
+++ b/index.html
@@ -24,9 +24,20 @@
 }
 
 #scoreBoard {
+    position: fixed;
+    transform: translateX(-50%);
+    left: 50%;
     width: auto;
     height: 25px;
     font-weight: bold;
+    z-index: 1;
+    user-select: none;
+}
+
+#game {
+    position: fixed;
+    transform: translateX(-50%);
+    left: 50%;
 }
 </style>
 
