--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <title>HelixJump</title>
     <script type="text/javascript" src="three.min.js"></script>
+    <script type="text/javascript" src="DecalGeometry.js"></script>
     <script type="text/javascript" src="MTLLoader.js"></script>
     <script type="text/javascript" src="OBJLoader.js"></script>
     <script type="text/javascript" src="tween.js"></script>
